--- a/MVCDrugStoreManager/MVCDrugStoreManager/Views/Shared/_LayoutAdmin.cshtml
+++ b/MVCDrugStoreManager/MVCDrugStoreManager/Views/Shared/_LayoutAdmin.cshtml
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="@Url.Action("Drug","Admin")">QUẢN LÝ SẢN PHẨM</a>
                     </li>
                 </ul>
             </div>
